# openclaw_quick_installer

./: .gitignore  README.md  go.mod  index.html  main.go
.github/workflows/: build.yml
internal/env/: shadow.go
internal/mirror/: select.go
internal/state/: manifest.go
internal/steps/: apikey.go  autofix.go  autofix_windows.go  config.go  feishu.go  gateway.go  install.go  manager.go  proc_other.go  proc_windows.go  runtime.go  syscheck.go
internal/ui/: console.go
openclaw_installer_windows/: CHANGELOG.md  LICENSE.md  README.md  README_DEVELOPER.md  UX_TEST_CHECKLIST.md  UX_TEST_REPORT_TEMPLATE.md  gen-i18n.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  验收脚本.md
openclaw_installer_windows/README_assets/: README.md
openclaw_installer_windows/docs/: ux-refresh-summary.md  ux-refresh-verification.md
openclaw_installer_windows/docs/testing/: windows-extreme-risk-baseline.md  windows-vm-matrix.md
openclaw_installer_windows/src/: App.tsx  index.css  main.tsx  types.ts
openclaw_installer_windows/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
openclaw_installer_windows/src-tauri/capabilities/: default.json
openclaw_installer_windows/src-tauri/icons/: icon.icns
openclaw_installer_windows/src-tauri/scripts/: cleanup-openclaw.ps1  gateway.ps1  install.ps1  reset-b-state.ps1  syscheck.ps1
openclaw_installer_windows/src-tauri/src/: commands.rs  lib.rs  main.rs
openclaw_installer_windows/src/components/: LanguageSwitch.tsx  LogScroller.tsx  ResizeHandles.tsx  StatusCard.tsx  StatusDot.tsx  StepBar.tsx  TitleBar.tsx  (+2 more)
(+51 files in other folders)
